# eas

./: README.md  haskit.json
edh_modules/eas/: RT.edh  __init__.edh  __main__.edh
host.hs/: eas.cabal
host.hs/repl/: Main.hs
host.hs/src/Event/Analytics/: DataType.hs  EHI.hs  EvsArts.hs  EvsDtArts.hs  Monad.hs  Source.hs  XCHG.hs
prototyping/: Evtlog-prot.edh
