cabal-version:      2.4
name:               eas
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/eas
bug-reports:        https://github.com/e-wrks/eas/issues
synopsis:           Event Analytics & Simulation
description:
  Please see the README on Github at <https://github.com/e-wrks/eas>

category:           Event Analysis Simulation
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/eas
  subdir:   host.hs

executable eas
  main-is:            Main.hs
  hs-source-dirs:     repl
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    AllowAmbiguousTypes
    TypeFamilies
    TypeOperators
    ViewPatterns
    MultiParamTypeClasses
    FunctionalDependencies

  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , eas
    , lossless-decimal
    , mtl
    , stm               >=2.5
    , text
    , transformers

library
  exposed-modules:    Event.Analytics.EHI
  other-modules:
    Event.Analytics.DataType
    Event.Analytics.EvsArts
    Event.Analytics.EvsDtArts
    Event.Analytics.Source
    Event.Analytics.XCHG

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    AllowAmbiguousTypes
    TypeFamilies
    TypeOperators
    ViewPatterns
    MultiParamTypeClasses
    FunctionalDependencies

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , bytestring
    , clock
    , containers
    , edh
    , hashable
    , lossless-decimal
    , mtl
    , primitive             >=0.2.1
    , random
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector                >=0.5
